--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,3 +62,6 @@ jobs:
         run: |
           # We call engine.py which contains your reasoning_engines.ReasoningEngine.create logic  
           python engine.py
+
+      - name: Update Vertex SDK
+        run: pip install --upgrade google-cloud-aiplatform
